<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".Guia">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:background="@color/design_default_color_error"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="@string/TituloTutorial"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="305dp"
        android:layout_height="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/Vermelho"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/laranja"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/Verde"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tutorial1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/tutoriaf1" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tutorial2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/tutorialf2" />

        </LinearLayout>


    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/Guia1"
        android:onClick="IrParaTelaGuia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>