<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".fase2">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:background="@color/design_default_color_error"
        android:gravity="center"
        android:text="@string/fase2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/Guia1"
        android:onClick="IrParaTelaFases"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ScrollView
        android:layout_width="305dp"
        android:layout_height="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/F2P1"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/F2P2"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
            <TextView
                android:id="@+id/textView34"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/F2P3"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/F2P4"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/F2P5"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="279dp"
                android:src="@drawable/fase2" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>