<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".Guia">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:background="@color/design_default_color_error"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="@string/BtnGuia"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BtnOpn"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/average_sans"
        android:onClick="IrParaTelaOpcoes"
        android:text="@string/Opcões"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <Button
        android:id="@+id/BtnTuto"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/average_sans"
        android:onClick="IrParaTelaTutorial"
        android:text="@string/TituloTutorial"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/Guia1"
        android:onClick="IrParaTelaMenu"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/BtnLevels"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/average_sans"
        android:onClick="IrParaTelaFases"
        android:text="@string/fase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <Button
        android:id="@+id/BtnControl"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/average_sans"
        android:onClick="IrParaTelaControle"
        android:text="@string/controles"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>