<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".fase1">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:background="@color/design_default_color_error"
        android:gravity="center"
        android:text="@string/fase1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="305dp"
        android:layout_height="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/Paragrafo1"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
            <TextView
                android:id="@+id/textView29"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/Paragrafo2"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/Paragrafo3"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/Paragrafo4"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:src="@drawable/fase1" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/Guia1"
        android:onClick="IrParaTelaFases"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>